--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express-formidable": "^1.2.0",
     "express-session": "^1.18.2",
     "firebase-admin": "^13.4.0",
+    "fuse.js": "^7.1.0",
     "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
